file paths allowed as input for corpuma, correct error for wrong paths